added lint configurations